k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: gastro-api
  labels:
    app: postgres

spec:
  type: ClusterIP

  selector:
    app: postgres

  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: postgres
