k8s/base/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gastro-api-http
  namespace: gastro-api
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: gastro-api-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik

  rules:
    - host: gastro.opik.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gastro-api-service
                port:
                  number: 80
